--- a/crucible-react/package.json
+++ b/crucible-react/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "react": "^16.13.1",
+    "react-actioncable-provider": "^2.0.0",
     "react-autosuggest": "^10.0.2",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
